Połączenie FrontEndu i backndu

--- a/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
@@ -1,8 +1,10 @@
 ﻿@page "/password/add"
 @using Microsoft.AspNetCore.Authorization;
 @using PasswordManagerBlazor.Shared.Models;
+@using PasswordManagerBlazor.Shared.DTOs;
 @attribute [Authorize]
 @inject NavigationManager navigationManager
+@inject HttpClient httpClient
 
 <head>
     <meta charset="UTF-8">
@@ -52,13 +54,29 @@
     private PasswordModel password = new PasswordModel();
     private string strongPass = "we suggest";
 
-    private void HandleValidSubmit()
+    private async Task HandleValidSubmit()
     {
-        // Handle form submission logic here
+        PasswordDto passwordDto = new PasswordDto();
+        passwordDto.Email = password.Email;
+        passwordDto.Url = password.Url;
+        passwordDto.PasswordHash = password.PasswordHash;
+
+        var response = await httpClient.PostAsJsonAsync("api/password", passwordDto);
+
+        if (response.IsSuccessStatusCode)
+        {
+            // Dodaj logikę po udanym dodaniu hasła, np. przekierowanie do innej strony
+            navigationManager.NavigateTo("/index");
+        }
+        else
+        {
+            // Dodaj logikę w przypadku błędu, np. wyświetl alert
+        }
     }
 
     private void GoToHome()
     {
-        navigationManager.NavigateTo("/");
+        navigationManager.NavigateTo("/index");
     }
 }
+
