--- a/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
@@ -1,6 +1,9 @@
 ﻿@inject NavigationManager navigationManager
-@page "/updated-password"
+@page "/updated-password/{Id}"
 @using Microsoft.AspNetCore.Authorization;
+@using PasswordManagerBlazor.Shared.DTOs;
+@inject NavigationManager navigationManager
+@inject HttpClient HttpClient
 @attribute [Authorize]
 
 
@@ -59,11 +62,41 @@
 @code {
     private PasswordModel passwordModel = new PasswordModel();
     private string strongPass = "we suggest"; // Przykład, powinieneś zaktualizować logikę generowania hasła
+    
+    [Parameter]
+    public string Id { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        // Use HttpClient to fetch the password data
+        var passwordDto = await HttpClient.GetFromJsonAsync<PasswordDto>($"api/password/{Id}");
+
+        // Assign the fetched data to the password model
+        passwordModel.Email = passwordDto.Email;
+        passwordModel.Url = passwordDto.Url;
+        passwordModel.PasswordHash = passwordDto.PasswordHash;
+    }
 
     private async Task HandleValidSubmit()
     {
-        // Implement your update logic here
-        // If update is successful, navigate to another page or update the UI
+        
+        // Create a PasswordDto from the password model
+        var passwordDto = new PasswordDto
+            {
+                Id = int.Parse(Id),
+                Email = passwordModel.Email,
+                Url = passwordModel.Url,
+                PasswordHash = passwordModel.PasswordHash,
+            };
+
+        // Use HttpClient to send the updated password data to the server
+        var response = await HttpClient.PutAsJsonAsync($"api/password/{Id}", passwordDto);
+
+        if (response.IsSuccessStatusCode)
+        {
+            // If update is successful, navigate to another page or update the UI
+            navigationManager.NavigateTo("/index");
+        }
     }
 
     private void NavigateToHome()
@@ -75,7 +108,8 @@
     {
         public string Email { get; set; }
         public string Url { get; set; }
-       public string PasswordHash { get; set; }
+        public string PasswordHash { get; set; }
     }
 }
+
 
