--- a/PasswordManagerBlazor/Client/Shared/MainLayout.razor
+++ b/PasswordManagerBlazor/Client/Shared/MainLayout.razor
@@ -10,12 +10,12 @@
             <div class="menu-bar">
                 <ul class="nav">
                     <li class="nav-item">
-                        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <NavLink class="nav-link" href="index" Match="NavLinkMatch.All">
                             <span class="oi oi-home" aria-hidden="true"></span> Home
                         </NavLink>
                     </li>
                     <li class="nav-item">
-                        <NavLink class="nav-link" href="login">
+                        <NavLink class="nav-link" href="">
                             <span class="oi oi-plus" aria-hidden="true"></span> Login
                         </NavLink>
                     </li>
