Poprawa kodów CSS

--- a/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
@@ -2,6 +2,9 @@
 @using Microsoft.AspNetCore.Authorization;
 @using PasswordManagerBlazor.Shared.Models;
 @using PasswordManagerBlazor.Shared.DTOs;
+@using System.Security.Cryptography;
+@using System.Text
+
 @attribute [Authorize]
 @inject NavigationManager navigationManager
 @inject HttpClient httpClient
@@ -40,19 +43,21 @@
         <div class="overlay">
             <div class="overlay-panel overlay-right">
                 <h1>Need to use other passwords?</h1>
-                <p>Go back to main page:</p>
+                <p>Go back to the main page:</p>
                 <button class="ghost" id="signUp" @onclick="GoToHome" value="Home">Home</button>
             </div>
         </div>
     </div>
 </div>
 
-#blazor-error-ui {
-    display: none;
-}
 @code {
     private PasswordModel password = new PasswordModel();
-    private string strongPass = "we suggest";
+    private string strongPass;
+
+    protected override void OnInitialized()
+    {
+        GenerateStrongPassword();
+    }
 
     private async Task HandleValidSubmit()
     {
@@ -65,12 +70,31 @@
 
         if (response.IsSuccessStatusCode)
         {
-            // Dodaj logikę po udanym dodaniu hasła, np. przekierowanie do innej strony
             navigationManager.NavigateTo("/index");
         }
         else
         {
-            // Dodaj logikę w przypadku błędu, np. wyświetl alert
+
+        }
+    }
+
+    private void GenerateStrongPassword()
+    {
+        const string validChars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^&*()_+";
+        const int passwordLength = 12;
+
+        using (var rng = RandomNumberGenerator.Create())
+        {
+            byte[] randomBytes = new byte[passwordLength];
+            rng.GetBytes(randomBytes);
+
+            StringBuilder passwordBuilder = new StringBuilder(passwordLength);
+            foreach (byte b in randomBytes)
+            {
+                passwordBuilder.Append(validChars[b % validChars.Length]);
+            }
+
+            strongPass = passwordBuilder.ToString();
         }
     }
 
@@ -79,4 +103,3 @@
         navigationManager.NavigateTo("/index");
     }
 }
-
