--- a/PasswordManagerBlazor/Client/Pages/Login.razor
+++ b/PasswordManagerBlazor/Client/Pages/Login.razor
@@ -46,11 +46,11 @@
     </div>
 </div>
 
-<style>
+@*<style>
     #blazor-error-ui {
         display: none;
     }
-</style>
+</style>*@
         @code {
     private bool ShowError { get; set; } = false;
     private bool ShowInfo { get; set; } = false;
