--- a/PasswordManagerBlazor/Client/Pages/TokenValidator.razor
+++ b/PasswordManagerBlazor/Client/Pages/TokenValidator.razor
@@ -37,9 +37,9 @@
     </div>
 </div>
 <style>
-    #blazor-error-ui {
+/*    #blazor-error-ui {
         display: none;
-    }
+    }*/
 </style>
 @code {
     private TokenValidatorModel tokenValidatorModel = new TokenValidatorModel();
