--- a/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
@@ -1,10 +1,12 @@
-﻿@inject NavigationManager navigationManager
-@page "/updated-password/{Id}"
+﻿@page "/updated-password/{Id}"
 @using Microsoft.AspNetCore.Authorization;
 @using PasswordManagerBlazor.Shared.DTOs;
 @inject NavigationManager navigationManager
 @inject HttpClient HttpClient
 @attribute [Authorize]
+
+@using System.Security.Cryptography;
+@using System.Text
 
 
 
@@ -54,33 +56,33 @@
         </div>
     </div>
     </body>
-<style>
+@*<style>
     #blazor-error-ui {
         display: none;
     }
-</style>
+</style>*@
 @code {
     private PasswordModel passwordModel = new PasswordModel();
-    private string strongPass = "we suggest"; // Przykład, powinieneś zaktualizować logikę generowania hasła
+    private string strongPass;
     
     [Parameter]
     public string Id { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        // Use HttpClient to fetch the password data
         var passwordDto = await HttpClient.GetFromJsonAsync<PasswordDto>($"api/password/{Id}");
 
-        // Assign the fetched data to the password model
         passwordModel.Email = passwordDto.Email;
         passwordModel.Url = passwordDto.Url;
         passwordModel.PasswordHash = passwordDto.PasswordHash;
+
+        GenerateStrongPassword();
     }
 
     private async Task HandleValidSubmit()
     {
         
-        // Create a PasswordDto from the password model
+
         var passwordDto = new PasswordDto
             {
                 Id = int.Parse(Id),
@@ -89,13 +91,33 @@
                 PasswordHash = passwordModel.PasswordHash,
             };
 
-        // Use HttpClient to send the updated password data to the server
+
         var response = await HttpClient.PutAsJsonAsync($"api/password/{Id}", passwordDto);
 
         if (response.IsSuccessStatusCode)
         {
-            // If update is successful, navigate to another page or update the UI
+
             navigationManager.NavigateTo("/index");
+        }
+    }
+
+    private void GenerateStrongPassword()
+    {
+        const string validChars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^&*()_+";
+        const int passwordLength = 12;
+
+        using (var rng = RandomNumberGenerator.Create())
+        {
+            byte[] randomBytes = new byte[passwordLength];
+            rng.GetBytes(randomBytes);
+
+            StringBuilder passwordBuilder = new StringBuilder(passwordLength);
+            foreach (byte b in randomBytes)
+            {
+                passwordBuilder.Append(validChars[b % validChars.Length]);
+            }
+
+            strongPass = passwordBuilder.ToString();
         }
     }
 
