--- a/PasswordManagerBlazor/Client/Pages/Duplicates.razor
+++ b/PasswordManagerBlazor/Client/Pages/Duplicates.razor
@@ -57,7 +57,7 @@
             <li><a class="menu__item" href="/index">My Passwords</a></li>
             <li><a class="menu__item" href="/duplicates">Duplicates</a></li>
             <li><a class="menu__item" href="/expired">Expired</a></li>
-            <li><a class="menu__item" href="/logout">Logout</a></li>
+            <li><a class="menu__item" href="/">Logout</a></li>
         </ul>
     </div>
     <br>
