--- a/PasswordManagerBlazor/Client/Pages/Expired.razor
+++ b/PasswordManagerBlazor/Client/Pages/Expired.razor
@@ -7,6 +7,12 @@
 @using Microsoft.AspNetCore.Authorization;
 @using PasswordManagerBlazor.Shared.DTOs;
 
+
+<head>
+    <meta charset="UTF-8">
+    <link href="css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 <body>
 
     <div class="alerts">
@@ -51,7 +57,7 @@
             <li><a class="menu__item" href="/index">My Passwords</a></li>
             <li><a class="menu__item" href="/duplicates">Duplicates</a></li>
             <li><a class="menu__item" href="/expired">Expired</a></li>
-            <li><a class="menu__item" href="/logout">Logout</a></li>
+            <li><a class="menu__item" href="/">Logout</a></li>
         </ul>
     </div>
     <br>
@@ -110,11 +116,11 @@
         </div>
     </div>
 </body>
-<style>
-    #blazor-error-ui {
+@*<style>
+/*    #blazor-error-ui {
         display: none;
-    }
-</style>
+    }*/
+</style>*@
 @code {
 
     private bool IsErrorVisible { get; set; }
