--- a/PasswordManagerBlazor/Client/wwwroot/css/index.css
+++ b/PasswordManagerBlazor/Client/wwwroot/css/index.css
@@ -221,12 +221,12 @@ input[type="checkbox"] {
 .container {
 	background-color: #fff;
 	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
-	width: 1100px;
-	max-width: 100%;
+	width: 100%;
+	max-width: 80%;
+	min-width: 1000px;
 	min-height: 600px;
 	max-height: 1000px;
 }
